fix arrow button spacing

--- a/website/styles/index.css
+++ b/website/styles/index.css
@@ -167,8 +167,6 @@ hr {
 	top: 50%;
 	width: auto;
 	padding: 16px;
-	padding-right: 24px;
-	padding-left: 24px;
 	margin-top: -22px;
 	color: var(--secondary-text-color);;
 	font-weight: bold;
